<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zagodoj</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up!</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="email_address">Email address</string>
    <string name="signup_button_label">Sign up</string>
    <string name="signup_error_title">Ooooops!</string>
    <string name="signup_error_message">Please make sure you eneter a username, password, and email address!</string>
    <string name="login_error_message">Please make sure you use correct username and password!</string>
    <string name="login_error_title">Ooooops!</string>
    <string name="logout_label">Logout</string>
    <string name="empty_inbox">No new messages!</string>
    <string name="empty_friends">Add friends to begin!</string>
    <string name="title_activity_edit_friend">Edit Friends</string>
    <string name="edit_friend_error">Sorry but you can\'t edit this friend!</string>
    <string name="edit_firen_error_title">We\'re sorry!</string>
    <string name="edit_friend_lable">Edit friends</string>
    <string name="friends_list_error">Soory there is a problem with downloading yout friends list!</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing yoy device\'s external storage.</string>
    <string name="error_on_activity_result">Sorry, there was an error1</string>
    <string name="error_getting_photo">There was an error during getting a photo!</string>
    <string name="warning_10MB">The selected video must be less than 10 MB!</string>
    <string name="error_getting_video">There was an error during file opening!</string>
    <string name="file_size_too_large">Chosen file is to large! There is 10 MB limit!</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_receipients">Choose Receipients</string>
    <string name="empty_recipients_list_message">The list is empty!</string>
    <string name="menu_send_label">SEND</string>
    <string name="title_activity_receipients_activity2">ReceipientsActivity2</string>

</resources>
