<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/logout"
          android:title="@string/logout_label"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/editFriend"
          android:title="@string/edit_friend_lable"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_camera"
          android:title="@string/menu_camera_label"
          android:orderInCategory="100"
          app:showAsAction="always"
        android:icon="@drawable/ic_action_camera"/>

</menu>
